# hanko-field

./: .dockerignore  .env.dev.example  .env.prod.example  .firebaserc  .gitignore  .lefthook.yml  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  compose.yaml  devbox.json  firebase.json  firestore.indexes.json  test_unused  test_unused_var
api/: Cargo.toml  Dockerfile.cloudrun  Makefile  go.mod  go.sum  main.go
api/assets/fonts/: README.md  profiles.json
api/cmd/api/: main.go
api/internal/config/: config.go
api/internal/di/: container.go
api/internal/domain/: production_queue.go  types.go
api/internal/handlers/: admin_audit.go  admin_audit_test.go  admin_catalog.go  admin_content.go  admin_content_test.go  admin_counters.go  admin_counters_test.go  admin_inventory.go  admin_inventory_test.go  admin_invoices.go  admin_invoices_test.go  admin_operations.go  admin_operations_test.go  admin_orders.go  admin_orders_test.go  admin_production_queues.go  admin_production_queues_test.go  (+44 more)
api/src/: main.rs  seal_fonts.rs  seal_renderer.rs
web/: .gitignore  Cargo.toml  Dockerfile.cloudrun  Makefile  go.mod  go.sum  main.go  package-lock.json  package.json  tailwind.config.js
web/blog/: posts.json
web/config/: env.sample
web/locales/: en.json  ja.json
web/src/: main.rs
web/static/: app.js  input.css  robots.txt  sitemap.xml
web/templates/: about.html  blog_article.html  blog_index.html  commercial_transactions.html  index.html  kanji_suggestions.html  payment_failure.html  payment_success.html  purchase_result.html  terms.html  top.html
(+1518 files in other folders)
