[package]
name = "hanko-field-web"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
askama = "0.15.4"
axum = { version = "0.8", features = ["form"] }
firebase_sdk_rust = { path = "../../firebase-sdk-rust" }
gcp_auth = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["macros", "net", "rt-multi-thread", "time"] }
tower-http = { version = "0.6", features = ["fs"] }
